fixed formatting on mobile devices

--- a/secret-project/src/app/home-page/home-page.component.css
+++ b/secret-project/src/app/home-page/home-page.component.css
@@ -11,13 +11,14 @@
   grid-column-start: 1;
   grid-column-end: -1;
   grid-row-start: 1;
-
   background-color: #3b3b3a;
 }
 
 .logo {
   border: 1px solid red;
+  max-height: 6.66vw;
   height: 10vh;
+  max-width: 20vw;
   aspect-ratio: 3;
 }
 
@@ -30,6 +31,8 @@
 
 .right-side-padding {
   height: 10vh;
+  max-height: 6.66vw;
+  max-width: 20vw;
   aspect-ratio: 3;
 }
 
@@ -58,21 +61,24 @@
 
 .review {
   display: flex;
-  /* border-color: rgb(107, 107, 107); */
   border-radius: 10px;
   border-style: solid;
   border-width: 3px;
-  height: 10vh;
+  height: fit-content;
+  min-height: 10vh;
   margin: 5px;
   padding: 20px;
+  align-items: center;
 }
 
 .review-image {
   aspect-ratio: 1;
+  height: 10vh;
+  max-height: 10vw;
 }
 
 .review-text {
-  margin-left: 10px;
+  margin-left: 1vw;
   /* color: rgb(169, 169, 169); */
 }
 
